# c_driver_stream

./: .gitignore  README.md
base_cam_img_process/get_frame_by_v4l2/: build_and_run.sh  capture_frame.c  capture_frame2.c  capture_two_frames.c
base_cam_img_process/rgb_2_png/: build_and_run.sh  frame.raw  rgb2png.c  rgb2pngNocompress.c
h264_learning/base/1_read_yuv_info/: build_and_run.sh  read_yuv_info.c
h264_learning/base/2_dct/: DCT_Process_Summary.md  build_and_run.sh  doc.md  frame0_Y.pgm  pratice_dct.c  simple_dct.c
h264_learning/base/3_ZigzagScan_RLE/: build_and_run.sh  doc.md  jpeg_step3_rle.c
h264_learning/base/4_HuffmanTree/: build_and_run.sh  huffmanBase.c
h264_learning/base/5_pipeHuffmanJPEG/: decode.c  (+6 more)
math_matplotlib/: derivative_notes.md
math_matplotlib/1_plot_derivative/: build.sh  plot_derivative.cpp  plot_derivative_v2.cpp
math_matplotlib/2_extrema_plot/: build.sh  extrema_plot.cpp  extrema_plot_opt.cpp
math_matplotlib/3_intergrate_simpson/: build.sh  intergrate.cpp
math_matplotlib/4_solve_equation/: build.sh  newton_solve_equation.cpp
math_matplotlib/5_gradient_3d_plot/: build.sh  doc.md  gradient_3D_plot2.cpp.bk  gradient_3d_plot.cpp
math_matplotlib/wraper_lib/: README.md  exprtk_wrapper.cpp  exprtk_wrapper.h
robot2dof/initSimp/: CMakeLists.txt  README.md
robot2dof/initSimp/src/: CMakeLists.txt  application.cpp  application.h  main.cpp
robot2dof/initSimp/src/gcode/: GCodeCommand.h  GCodeExecutor.cpp  GCodeParser.cpp  GCodeParser.h  demo.gcode
robot2dof/initSimp/src/window/: GLFWWindow.cpp  keyGLFW.h  window.cpp  window.h
(+48 files in other folders)
